Fixed grid issue and left notes for dark mode implementaion

--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@ body {
 
 .bold-font {
     font-weight: 800;
+    font-size: 1.3rem;
 }
 
 .header {
@@ -100,7 +101,7 @@ body {
 
 .header-bottom {
     display: grid;
-    grid: 1fr / 8vw 30vw repeat(3, 6vw);
+    grid: 1fr / minmax(4rem, 8vw) 30vw repeat(3, 6vw);
     align-items: center;
     gap: max(1rem, 0.5vw);
 }
@@ -158,8 +159,8 @@ input {
 .sidebar-top {
     display: grid;
     grid: repeat(6, 1fr) / 40px 1fr;
-    margin-bottom: 3rem;
     grid-column: span 2;
+    grid-area: 3 / 1 / 4 / 2;
 }
 
 .sidebar-bottom {
@@ -168,6 +169,8 @@ input {
     grid-column: span 2;
     align-self: start;
     gap: 0.5rem 0ch;
+    grid-area: 4 / 1 / 5 / 2;
+    align-self: center;
 }
 
 .container {
@@ -177,15 +180,15 @@ input {
 
     display: grid;
     grid-template-columns: 2fr 1fr;
-    grid-template-rows: 50px 1fr;
-    gap: 2vw;
+    grid-template-rows: 1.5rem 1fr repeat(2,1.5rem) 1fr;
+    gap: 1vw 2vw;
 }
 
 .content {
-    grid-area: 2 / 1 / 3 / 2 ;
+    grid-area: 2 / 1 / 6 / 2 ;
     display: grid;
     grid-template-columns: repeat(2, minmax(200px, 30vw));
-    grid-template-rows: repeat(auto-fill, minmax(320px, 30vh));
+    grid-template-rows: repeat(3, 1fr);
     gap: 2vw;
 }
 
@@ -205,14 +208,17 @@ input {
     box-shadow: 2px 2px var(--sidebar-color);
 }
 
-.content-header {
-    align-self: center;
-}
-
 .content-text {
     grid-column: span 4;
     overflow: hidden;
     color: var(--grey-text);
+}
+
+.content-header,
+.projects-header,
+.announcement-header,
+.trending-header {
+    align-self: center;
 }
 
 .project-icons {
@@ -233,55 +239,55 @@ input {
 }
 
 .announcements {
-    grid-area: 2 / 1;
+    grid-area: 2 / 2;
     padding: 3vw;
     line-height: 2.5ch;
+
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: minmax(150px,20vw);
+    gap: 2vw;
 }
 
 .announcements,
 .trending {
     background-color: var(--header-color);
-    display: grid;
-
-    margin-bottom: 5vh;
     border-radius: 10px;
+}
+
+
+.announcement-1-content,
+.announcement-2-content {
+    padding-bottom: 3vw;
+    border-bottom: 1px solid var(--shadow-color);    
 }
 
 .announcement-1,
 .announcement-2,
 .announcement-3 {
-    margin-bottom: 0.5ch;
+    align-self: center;
 }
 
-.announcement-2,
-.announcement-3 {
-    padding-top: 2vw;
-}
 
-.announcement-1-content,
-.announcement-2-content {
-    padding-bottom: 2vw;
-    border-bottom: 1px solid var(--shadow-color);
-    
-}
 
 .announcement-1-content,
 .announcement-2-content,
 .announcement-3-content {
-    color: var(--grey-text);
+    color: var(--grey-text);   
 }
 
 .trending {
-    grid-area: 4 / 1;
+    display: grid;
+    grid-area: 5 / 2;
     grid-template-columns: 50px 1fr;
     gap: 1.5rem 0rem;
     align-items: center;
-    padding: 10px;
+    padding: 3vw;
     line-height: 2.5ch;
 }
 
 .trending-header {
-    grid-area: 3 / 1;
+    grid-area: 4 / 2;
 }
 
 .at {
@@ -297,7 +303,7 @@ input {
 /* icons */
 
 .dashboard-icon {
-    background: url(icons/dashboard.svg) no-repeat;
+    background: url(icons/dashboard.svg) no-repeat center;
 }
 
 .home-icon {
@@ -410,15 +416,8 @@ input {
 
 /* sidebar */
 
-.dashboard-icon,
 .dashboard {
-    margin-top: 0.5rem;
-    margin-left: 0.5rem;
-}
-
-.dashboard {
-    margin-top: 1.2rem;
-    margin-left: 0.5rem; 
+    align-self: center;
     font-size: 1.5rem;
 }
 
